# jana

./: Cargo.toml  Jana.toml  README.md  SPEC.md
src/: consts.rs  main.rs  utils.rs
src/commands/: clean.rs  help.rs  mod.rs  run.rs
src/commands/init/: mod.rs  template.rs
src/commands/init/files/: Lib.java_  Main.java_
src/project/: mod.rs
src/tools/: git.rs  java.rs  mod.rs
